[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fonts/VillainTeamUpSpiked-2Ov5e.otf" type="DynamicFontData" id=1]
[ext_resource path="res://sources/game/transitions/StarWarsText.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="StarWarsText" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainTextLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 1250.0
margin_right = -20.0
margin_bottom = 1773.0
custom_colors/font_color = Color( 0.854902, 0.847059, 0.572549, 1 )
custom_fonts/font = SubResource( 2 )
text = "Bem vindo a Divercity, você morava em Kenerland, mas, por ter dificuldades em aceitar as diferenças das pessoas, não se adaptou ao ambiente em que vivia. Em busca disso, julgava ser necessário uma mudança de ares, botou uma mochila nas costas, e saiu mundo afora. Dentre as paradas, você acabou chegando em uma cidade diferente, conhecida por transformar a vida daqueles que passam por ela. "
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextTween" type="Tween" parent="."]

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tween_all_completed" from="TextTween" to="." method="_on_TextTween_tween_all_completed"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
